# Qv2rayBase-PluginInterface

./: CMakeLists.txt
cmake/: QvPluginInterfaceConfig.cmake.in  QvPluginInterfaceMacros.cmake
include/QvPlugin/: PluginInterface.hpp
include/QvPlugin/Common/: CommonSafeType.hpp  CommonTypes.hpp  EditorCreatorDefs.hpp  QvPluginBase.hpp
include/QvPlugin/Connections/: ConnectionsBase.hpp
include/QvPlugin/Gui/: QvGUIPluginInterface.hpp
include/QvPlugin/Handlers/: EventHandler.hpp  KernelHandler.hpp  LatencyTestHandler.hpp  SubscriptionHandler.hpp
include/QvPlugin/Utils/: BindableProps.hpp  INetworkRequestHelper.hpp  JsonConversion.hpp
include/QvPluginInterface/: QvPluginBase.hpp  QvPluginInterface.hpp
include/QvPluginInterface/Common/: CommonSafeType.hpp  CommonTypes.hpp  QvPluginBase.hpp
include/QvPluginInterface/Connections/: ConnectionsBase.hpp  ConnectionsBaseTypes.hpp  ConnectionsSafeTypes.hpp
include/QvPluginInterface/Gui/: QvGUIPluginInterface.hpp
include/QvPluginInterface/Handlers/: EventHandler.hpp  IProfilePreprocessor.hpp  KernelHandler.hpp  LatencyTestHandler.hpp  OutboundHandler.hpp  SubscriptionHandler.hpp
include/QvPluginInterface/JsonConversion/: JsonConversion.hpp
include/QvPluginInterface/Utils/: BindableProps.hpp  ForEachMacros.hpp  JsonConversion.hpp
